vpc.yaml
# inside directory, ssh-keygen -f terra-admin
# cat terra-admin.pub

# vim vpc.tf
-------------------------------
provider "aws" {
  region     = "us-east-1"
  access_key = "xyz"
  secret_key = "xyz"
}
#for vpc
resource "aws_vpc" "prod_vpc" {
  cidr_block = "10.0.0.0/16"
}
#for igw

resource "aws_internet_gateway" "prod-igw" {
  vpc_id = aws_vpc.prod_vpc.id

  tags = {
    Name = "prod-igw"
  }
}

#for public subnet

resource "aws_subnet" "public-subnet" {
  vpc_id     = aws_vpc.prod_vpc.id
  cidr_block = "10.0.0.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "public-subnet"
  }
}

#for private subnet

resource "aws_subnet" "private-subnet" {
  vpc_id     = aws_vpc.prod_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "private-subnet"
  }
}

#for sg

resource "aws_security_group" "test_access" {
  name        = "test_access"
  vpc_id      = aws_vpc.prod_vpc.id
  description = "allow ssh and http"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


}

#rt for pub-subnet

resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.prod-igw.id
  }
}

#public rt association

resource "aws_route_table_association" "public-rt-asso" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.public-rt.id
}

#ec2 in public subnet

resource "aws_instance" "public-server" {
  ami             = "ami-0bdd88bd06d16ba03"
  subnet_id       = aws_subnet.public-subnet.id
  instance_type   = "t3.micro"
  security_groups = ["${aws_security_group.test_access.id}"]
  key_name        = "terra-admin"
  tags = {
    Name     = "test-World_pub"
    Stage    = "testing"
    Location = "chennai"
  }

}

##create an EIP for EC2
resource "aws_eip" "sanjay-ec2-eip" {
  instance = aws_instance.public-server.id
}

#add ssh-key

resource "aws_key_pair" "terra-admin" {
  key_name   = "terra-admin"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC2z6EmaFj//6PY5Beweo2KbgYgpPOMMCVD9G222sMjfTBs0QVTshDLYoXi/AoeuG1hLKxRl1SrGJtmqIH669deKiLYSRee2tiNwX0B4OFXXNHVNhU6dXxqYYDMCLW93fFCL7E16XzO5SsPEyVt94cLUByoJaSEj4Q9mVR7LBFVewuImLt7/bkCEWb4AxLvEtH2JF1sRIAT+HBax4Zd5AM8JPYiwjxzvaFRccLUh0mbehbqlj35JIezVs/XllE/OhpvDVjmR6JfGN8M5xuKKdXxyiixxb2u+EeeuzNAnvYz4VGt92/4YwaSK6QtJlgScjE46detsP2ay/xNheDYC5e8sKsD7ZdLYOHkAC+Zk75e/oFagnYNI5DNo71B1o5DvqsYQp+tUiTR1azhkRGz5lvhR2T+IDLe5qbKq5OiqGByLyD9A/xAjodg75dMAoo1 [...]
}
##create a public ip for Nat gateway
resource "aws_eip" "nat-eip" {
}

#nat gateway creation
resource "aws_nat_gateway" "my-ngw" {
  allocation_id = aws_eip.nat-eip.id
  subnet_id     = aws_subnet.public-subnet.id
}

#create private route table
resource "aws_route_table" "private-rt" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.my-ngw.id
  }


  tags = {
    Name = "private-rt"
  }
}
##route Tatable assosication code
resource "aws_route_table_association" "private-asso" {
  subnet_id      = aws_subnet.private-subnet.id
  route_table_id = aws_route_table.private-rt.id

}
#private server

resource "aws_instance" "private-server" {
  ami             = "ami-0bdd88bd06d16ba03"
  subnet_id       = aws_subnet.private-subnet.id
  instance_type   = "t3.micro"
  security_groups = ["${aws_security_group.test_access.id}"]
  key_name        = "terra-admin"
  tags = {
    Name     = "test-World-pvt"
    Stage    = "testing"
    Location = "chennai"
  }

}
-----------------------
terraform init
terraform fmt
terraform validate
terraform apply
